fixed content overflow in mobile

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ footer {
     }
 
     #arrayContainer {
-        height: 200px;
+        height: 300px;
     }
 
     .bar {
